otel-subscription.yml
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-opentelemetry-operator
