tempo-subscription.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-tempo-operator
