loadgen.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loadgen-deployment
  namespace: tracing
  labels:
    app: loadgen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loadgen
  template:
    metadata:
      labels:
        app: loadgen
    spec:
      containers:
      - name: frontend
        image: ghcr.io/pavolloffay/kubecon-eu-2023-opentelemetry-kubernetes-tutorial-loadgen:latest
