app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend1-deployment
  namespace: tracing
  labels:
    app: backend1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend1
  template:
    metadata:
      labels:
        app: backend1
    spec:
      containers:
      - name: backend1
        image: ghcr.io/pavolloffay/kubecon-eu-2023-opentelemetry-kubernetes-tutorial-backend1:latest 
        ports:
        - containerPort: 5000
          name: service
---
apiVersion: v1
kind: Service
metadata:
  name: backend1-service
  namespace: tracing
  labels:
    app: backend1
spec:
  ports:
  - name: http
    port: 5000
    targetPort: 5000
  selector:
    app: backend1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend2-deployment
  namespace: tracing
  labels:
    app: backend2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend2
  template:
    metadata:
      labels:
        app: backend2
    spec:
      containers:
      - name: backend2
        image: ghcr.io/pavolloffay/kubecon-eu-2023-opentelemetry-kubernetes-tutorial-backend2:latest
        ports:
        - containerPort: 5165
---
apiVersion: v1
kind: Service
metadata:
  name: backend2-service
  namespace: tracing
spec:
  ports:
  - name: http
    port: 5165
    targetPort: 5165
  selector:
    app: backend2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: tracing
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: ghcr.io/pavolloffay/kubecon-eu-2023-opentelemetry-kubernetes-tutorial-frontend:latest
        ports:
        - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: tracing
spec:
  ports:
  - name: http
    port: 4000
    targetPort: 4000
  selector:
    app: frontend
---

kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: frontend
  namespace: tracing
spec:
  to:
    kind: Service
    name: frontend-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
